--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "lint-staged": "^15.2.7",
     "lucide-react": "^0.468.0",
     "next": "14.2.5",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
