--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
@@ -30,6 +31,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
